[package]
name = "multipart"

version = "0.7.0"

authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "A backend-agnostic extension for HTTP libraries that provides support for POST multipart/form-data requests on for both client and server."

keywords = ["form-data", "hyper", "iron", "http", "upload"]

repository = "http://github.com/abonander/multipart"

documentation = "http://abonander.github.io/multipart/doc/multipart/index.html"

license = "MIT OR Apache-2.0"

[dependencies]
env_logger = "0.3.4"
log = "0.3.6"
mime = "0.2.2"
mime_guess = "1.8.0"
rand = "0.3.14"
tempdir = "0.3.5"

[dependencies.buf_redux]
optional = true
version = "0.1"

[dependencies.hyper]
optional = true
version = "0.9.10"

[dependencies.iron]
optional = true
version = "0.4"

[dependencies.memchr]
optional = true
version = "0.1"

# NOTE: use `nickel_` feature, as `hyper` feature is required.
[dependencies.nickel]
optional = true
version = "0.8"

[dependencies.tiny_http]
optional = true
version = "0.5"

[features]
client = []
default = ["hyper", "server", "client"]
server = ["buf_redux", "memchr"]
nickel_ = ["nickel", "hyper"]
all = ["iron", "nickel_", "tiny_http"]
